RESOLVED FIXED 173352
[Win] WebKit shouldn't include the forwarding header of WebKit itself
https://bugs.webkit.org/show_bug.cgi?id=173352
Summary [Win] WebKit shouldn't include the forwarding header of WebKit itself
Fujii Hironori
Reported 2017-06-14 00:45:04 PDT
[Win] WebKit shouldn't include the forwarding header of WebKit itself In June 6th, I observed weird build errors on wincairo-2 build bot. https://build.webkit.org/builders/WinCairo%2064-Bit%20Release/builds/2980 > FAILED: Source/WebKit/CMakeFiles/WebKit.dir/win/WebView.cpp.obj > "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Tools\MSVC\14.10.25017\bin\HostX64\x64\cl.exe" /nologo /TP @Source\WebKit\CMakeFiles\WebKit.dir\win\WebView.cpp.obj.rsp /showIncludes /FoSource\WebKit\CMakeFiles\WebKit.dir\win\WebView.cpp.obj /FdSource\WebKit\CMakeFiles\WebKit.dir\ /FS -c ..\..\Source\WebKit\win\WebView.cpp > ..\..\Source\WebKit\win\WebView.cpp(5283): error C2039: 'mediaPreloadingEnabled': is not a member of 'IWebPreferencesPrivate4' > C:\WebKit-BuildSlave\win-cairo-release\build\WebKitBuild\Release\DerivedSources\ForwardingHeaders\WebKit/WebKit.h(33171): note: see declaration of 'IWebPreferencesPrivate4' > [1403/1497] Building CXX object Source\WebCore\CMakeFiles\WebCoreTestSupport.dir\testing\Internals.cpp.obj > C:\WebKit-BuildSlave\win-cairo-release\build\WebKitLibraries\win\include\unicode/ucasemap.h(93): warning C4577: 'noexcept' used with no exception handling mode specified; termination on exception is not guaranteed. Specify /EHsc This was happened because generated WebKit.h is obsolete after a IDL file was modified in Bug 172501. The problem here seems that the forwarding header of WebKit (ForwardingHeaders\WebKit/WebKit.h) is included in WebView.cpp. https://trac.webkit.org/changeset/30186 seems the revision the include has been introduced.
Attachments
Patch (1.15 KB, patch)
2017-06-14 00:51 PDT, Fujii Hironori
no flags
Patch (1.22 KB, patch)
2017-06-14 19:40 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2017-06-14 00:51:10 PDT
Fujii Hironori
Comment 2 2017-06-14 19:40:51 PDT
WebKit Commit Bot
Comment 3 2017-06-15 14:38:52 PDT
Comment on attachment 312947 [details] Patch Clearing flags on attachment: 312947 Committed r218358: <http://trac.webkit.org/changeset/218358>
WebKit Commit Bot
Comment 4 2017-06-15 14:38:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.