[Win] WebKit shouldn't include the forwarding header of WebKit itself https://bugs.webkit.org/show_bug.cgi?id=173352

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2017-06-15
Reviewed by Alex Christensen.

* WebKitPrefix.h: Include WebKit.h of DerivedSources/WebKit instead of DerivedSources/ForwardingHeaders.

Canonical link: https://commits.webkit.org/190312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218358 268f45cc-cd09-0410-ab3c-d52691b4dbfc